Hopefully this fixes the inability to debug

--- a/src/Ferop.Sample/Ferop.Sample.fsproj
+++ b/src/Ferop.Sample/Ferop.Sample.fsproj
@@ -53,6 +53,8 @@
     <Tailcalls>true</Tailcalls>
     <DefineConstants>__64BIT__</DefineConstants>
     <PlatformTarget>x64</PlatformTarget>
+    <TreatWarningsAsErrors>false</TreatWarningsAsErrors>
+    <WarningsAsErrors />
   </PropertyGroup>
   <Import Project="$(MSBuildExtensionsPath32)\..\Microsoft SDKs\F#\3.1\Framework\v4.0\Microsoft.FSharp.Targets" />
   <ItemGroup>
