Removing CompilerGeneratedAttribute checking for exported functions. Using a naming convention instead.

--- a/src/Ferop.Core/Ferop.Core.fsproj
+++ b/src/Ferop.Core/Ferop.Core.fsproj
@@ -81,6 +81,7 @@
   <ItemGroup>
     <Compile Include="io.fs" />
     <Compile Include="ctast.fs" />
+    <Compile Include="cconv.fsi" />
     <Compile Include="cconv.fs" />
     <Compile Include="cgen.fs" />
     <Compile Include="core.fs" />
