--- a/src/Ferop.Core/Ferop.Core.fsproj
+++ b/src/Ferop.Core/Ferop.Core.fsproj
@@ -93,21 +93,16 @@
     <None Include="build\Ferop.targets">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
-    <None Include="packages.config" />
-    <None Include="..\..\packages\FSharp.Core.3.1.2\lib\net40\FSharp.Core.optdata">
-      <Link>FSharp.Core.optdata</Link>
+    <None Include="FSharp.Core.sigdata">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
-    <None Include="..\..\packages\FSharp.Core.3.1.2\lib\net40\FSharp.Core.sigdata">
-      <Link>FSharp.Core.sigdata</Link>
+    <None Include="packages.config" />
+    <None Include="FSharp.Core.optdata">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
   </ItemGroup>
   <ItemGroup>
-    <Reference Include="FSharp.Core">
-      <HintPath>..\..\packages\FSharp.Core.3.1.2\lib\net40\FSharp.Core.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
+    <Reference Include="FSharp.Core, Version=4.3.1.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
     <Reference Include="mscorlib" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -130,7 +125,8 @@
   <ItemGroup>
     <ProjectReference Include="..\Ferop\Ferop.fsproj">
       <Name>Ferop</Name>
-      <Project>{2D2A5797-D145-4D3E-8291-9EB02972CAA7}</Project>
+      <Project>{88e06223-2026-42f8-be6d-b03e3ed3fe4b}</Project>
+      <Private>True</Private>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
