--- a/src/Ferop.Tests/app.config
+++ b/src/Ferop.Tests/app.config
@@ -1,15 +1,35 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <runtime>
-    <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
-      <dependentAssembly>
-        <assemblyIdentity name="FSharp.Core" publicKeyToken="b03f5f7f11d50a3a" culture="neutral"/>
-        <bindingRedirect oldVersion="4.0.0.0" newVersion="4.3.1.0"/>
-      </dependentAssembly>
-      <dependentAssembly>
-        <assemblyIdentity name="NUnit.Framework" publicKeyToken="96d09a1eb7f44a77" culture="neutral"/>
-        <bindingRedirect oldVersion="2.6.2.12296" newVersion="2.6.3.13283"/>
-      </dependentAssembly>
-    </assemblyBinding>
-  </runtime>
+    
+  <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+  <dependentAssembly>
+    <assemblyIdentity name="FSharp.Core" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
+    <bindingRedirect oldVersion="4.0.0.0" newVersion="4.3.1.0" />
+  </dependentAssembly>
+  <dependentAssembly>
+    <assemblyIdentity name="NUnit.Framework" publicKeyToken="96d09a1eb7f44a77" culture="neutral" />
+    <bindingRedirect oldVersion="2.6.2.12296" newVersion="2.6.3.13283" />
+  </dependentAssembly>
+  <dependentAssembly>
+    <assemblyIdentity name="Mono.Cecil.Mdb" publicKeyToken="0738eb9f132ed756" culture="neutral" />
+    <bindingRedirect oldVersion="0.0.0.0-0.9.6.0" newVersion="0.9.6.0" />
+  </dependentAssembly>
+  <dependentAssembly>
+    <assemblyIdentity name="Mono.Cecil.Pdb" publicKeyToken="0738eb9f132ed756" culture="neutral" />
+    <bindingRedirect oldVersion="0.0.0.0-0.9.6.0" newVersion="0.9.6.0" />
+  </dependentAssembly>
+  <dependentAssembly>
+    <assemblyIdentity name="Mono.Cecil.Rocks" publicKeyToken="0738eb9f132ed756" culture="neutral" />
+    <bindingRedirect oldVersion="0.0.0.0-0.9.6.0" newVersion="0.9.6.0" />
+  </dependentAssembly>
+  <dependentAssembly>
+    <assemblyIdentity name="Mono.Cecil" publicKeyToken="0738eb9f132ed756" culture="neutral" />
+    <bindingRedirect oldVersion="0.0.0.0-0.9.6.0" newVersion="0.9.6.0" />
+  </dependentAssembly>
+  <dependentAssembly>
+    <assemblyIdentity name="nunit.framework" publicKeyToken="96d09a1eb7f44a77" culture="neutral" />
+    <bindingRedirect oldVersion="0.0.0.0-2.6.3.13283" newVersion="2.6.3.13283" />
+  </dependentAssembly>
+</assemblyBinding></runtime>
 </configuration>
